--- a/Bloco de Notas PSI 1/Bloco de Notas PSI 1.csproj
+++ b/Bloco de Notas PSI 1/Bloco de Notas PSI 1.csproj
@@ -79,5 +79,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="alunos.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
